Fixed bug where due date line would overflow for longer dates

--- a/main_page_style.css
+++ b/main_page_style.css
@@ -112,18 +112,20 @@ span {
 }
 /* div containing date and reward*/
 .task_details{
+	padding-left: 0px;
+	padding-right: 0px;
 	font-size: 20px;
 }
 /* describe date*/
 .task_date {
 	display: inline-block;
-	width: 40%;
+	width: 48%;
 	text-align: left;
 }
 /* describe reward*/
 .task_reward {
 	display: inline-block;
-	width: 40%;
+	width: 48%;
 	text-align: right;
 }
 /* format a kid's name */
